@@ -31,9 +31,9 @@ public class MediumControlPanel extends PNode {
         }
     };
 
-    public MediumControlPanel( final PhetPCanvas phetPCanvas, final Property<Medium> medium, final Property<Function1<Double, Color>> colorMappingFunction ) {
+    public MediumControlPanel( final PhetPCanvas phetPCanvas, final Property<Medium> medium, final Property<Function1<Double, Color>> colorMappingFunction, final String name ) {
         final MediumState initialMediumState = medium.getValue().getMediumState();
-        final PText materialLabel = new PText( "Material:" ) {{
+        final PText materialLabel = new PText( name ) {{
             setFont( labelFont );
         }};
         addChild( materialLabel );
